--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "chart-library": "^1.1.1",
     "date-fns": "^2.15.0",
+    "mindfusion-common": "^1.1.9",
+    "plotly.js": "^1.54.6",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-plotly.js": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
